[gd_scene load_steps=17 format=2]

[ext_resource path="res://local_map/LocalMap.gd" type="Script" id=1]
[ext_resource path="res://assets/tilesets/grasslands.tres" type="TileSet" id=2]
[ext_resource path="res://assets/tilesets/grid/grid_tileset.tres" type="TileSet" id=3]
[ext_resource path="res://local_map/grid/GameBoard.gd" type="Script" id=4]
[ext_resource path="res://local_map/grid/SpawningPoint.tscn" type="PackedScene" id=5]
[ext_resource path="res://local_map/grid/PawnContainer.gd" type="Script" id=6]
[ext_resource path="res://party/Party.tscn" type="PackedScene" id=7]
[ext_resource path="res://local_map/pawns/PawnInteractive.tscn" type="PackedScene" id=8]
[ext_resource path="res://local_map/pawns/actions/StartCombatAction.tscn" type="PackedScene" id=9]
[ext_resource path="res://combat/battlers/formations/PorcupineFormation001.tscn" type="PackedScene" id=10]
[ext_resource path="res://local_map/pawns/actions/DialogueAction.tscn" type="PackedScene" id=11]
[ext_resource path="res://local_map/pawns/unique_pawns/TestQuestGiver.tscn" type="PackedScene" id=12]
[ext_resource path="res://local_map/pawns/unique_pawns/TestQuestReceiver.tscn" type="PackedScene" id=13]
[ext_resource path="res://interface/gui/DialogueBox.tscn" type="PackedScene" id=14]

[sub_resource type="RectangleShape2D" id=1]

extents = Vector2( 50, 50 )

[sub_resource type="RectangleShape2D" id=2]

extents = Vector2( 80, 80 )

[node name="LocalMap" type="Node2D"]
script = ExtResource( 1 )

[node name="Map" type="TileMap" parent="."]
z_index = -1
z_as_relative = false
tile_set = ExtResource( 2 )
cell_size = Vector2( 80, 80 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 29, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 9, 0, 65549, 9, 1, 65550, 9, 1, 65551, 9, 1, 65552, 9, 2, 65553, 1, 0, 65554, 1, 0, 65555, 1, 0, 65556, 1, 0, 65557, 1, 0, 65558, 1, 0, 65559, 1, 0, 65560, 1, 0, 65561, 1, 0, 65562, 1, 0, 65563, 1, 0, 65564, 1, 0, 65565, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 9, 65536, 131085, 9, 65537, 131086, 9, 65537, 131087, 9, 65537, 131088, 9, 65538, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 131092, 1, 0, 131093, 3, 0, 131094, 1, 0, 131095, 1, 0, 131096, 1, 0, 131097, 1, 0, 131098, 1, 0, 131099, 1, 0, 131100, 1, 0, 131101, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 9, 131072, 196621, 9, 131073, 196622, 9, 131073, 196623, 9, 131073, 196624, 9, 131074, 196625, 1, 0, 196626, 1, 0, 196627, 1, 0, 196628, 1, 0, 196629, 1, 0, 196630, 1, 0, 196631, 1, 0, 196632, 1, 0, 196633, 1, 0, 196634, 1, 0, 196635, 1, 0, 196636, 1, 0, 196637, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 262164, 1, 0, 262165, 1, 0, 262166, 1, 0, 262167, 1, 0, 262168, 1, 0, 262169, 1, 0, 262170, 1, 0, 262171, 1, 0, 262172, 1, 0, 262173, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 9, 4, 327693, 9, 5, 327694, 9, 5, 327695, 9, 5, 327696, 9, 6, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 327700, 1, 0, 327701, 1, 0, 327702, 1, 0, 327703, 1, 0, 327704, 1, 0, 327705, 1, 0, 327706, 1, 0, 327707, 1, 0, 327708, 1, 0, 327709, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 3, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 3, 0, 393236, 1, 0, 393237, 1, 0, 393238, 1, 0, 393239, 1, 0, 393240, 1, 0, 393241, 1, 0, 393242, 1, 0, 393243, 1, 0, 393244, 1, 0, 393245, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 458772, 1, 0, 458773, 1, 0, 458774, 1, 0, 458775, 1, 0, 458776, 1, 0, 458777, 1, 0, 458778, 1, 0, 458779, 1, 0, 458780, 1, 0, 458781, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 9, 0, 524292, 9, 1, 524293, 9, 2, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 524309, 1, 0, 524310, 1, 0, 524311, 1, 0, 524312, 1, 0, 524313, 1, 0, 524314, 1, 0, 524315, 1, 0, 524316, 1, 0, 524317, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 9, 65536, 589828, 9, 65537, 589829, 9, 65538, 589830, 1, 0, 589831, 1, 0, 589832, 9, 65540, 589833, 9, 5, 589834, 9, 5, 589835, 9, 65541, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 589844, 1, 0, 589845, 1, 0, 589846, 1, 0, 589847, 1, 0, 589848, 1, 0, 589849, 1, 0, 589850, 1, 0, 589851, 1, 0, 589852, 1, 0, 589853, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 9, 65536, 655364, 9, 65537, 655365, 9, 65538, 655366, 1, 0, 655367, 1, 0, 655368, 9, 131075, 655369, 1, 0, 655370, 1, 0, 655371, 9, 65539, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 655380, 1, 0, 655381, 1, 0, 655382, 1, 0, 655383, 1, 0, 655384, 1, 0, 655385, 1, 0, 655386, 1, 0, 655387, 1, 0, 655388, 1, 0, 655389, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 9, 65536, 720900, 9, 65537, 720901, 9, 65538, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 9, 65539, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 9, 3, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 1, 0, 720917, 1, 0, 720918, 1, 0, 720919, 1, 0, 720920, 1, 0, 720921, 1, 0, 720922, 1, 0, 720923, 1, 0, 720924, 1, 0, 720925, 1, 0, 786432, 1, 0, 786433, 1, 0, 786434, 1, 0, 786435, 9, 65536, 786436, 9, 65537, 786437, 9, 65538, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 9, 131076, 786444, 9, 5, 786445, 9, 5, 786446, 9, 5, 786447, 9, 131077, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 786451, 1, 0, 786452, 1, 0, 786453, 1, 0, 786454, 1, 0, 786455, 3, 0, 786456, 1, 0, 786457, 1, 0, 786458, 1, 0, 786459, 1, 0, 786460, 1, 0, 786461, 1, 0, 851968, 1, 0, 851969, 1, 0, 851970, 1, 0, 851971, 9, 65536, 851972, 9, 65537, 851973, 9, 65538, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 1, 0, 851986, 1, 0, 851987, 1, 0, 851988, 1, 0, 851989, 1, 0, 851990, 1, 0, 851991, 1, 0, 851992, 1, 0, 851993, 1, 0, 851994, 1, 0, 851995, 1, 0, 851996, 1, 0, 851997, 1, 0, 917504, 1, 0, 917505, 1, 0, 917506, 1, 0, 917507, 9, 131072, 917508, 9, 131073, 917509, 9, 131074, 917510, 1, 0, 917511, 1, 0, 917512, 1, 0, 917513, 1, 0, 917514, 1, 0, 917515, 1, 0, 917516, 1, 0, 917517, 9, 0, 917518, 9, 1, 917519, 9, 2, 917520, 1, 0, 917521, 1, 0, 917522, 1, 0, 917523, 1, 0, 917524, 1, 0, 917525, 1, 0, 917526, 1, 0, 917527, 1, 0, 917528, 1, 0, 917529, 1, 0, 917530, 1, 0, 917531, 1, 0, 917532, 1, 0, 917533, 1, 0, 983040, 1, 0, 983041, 1, 0, 983042, 1, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 1, 0, 983048, 1, 0, 983049, 1, 0, 983050, 1, 0, 983051, 1, 0, 983052, 1, 0, 983053, 9, 65536, 983054, 9, 65537, 983055, 9, 65538, 983056, 1, 0, 983057, 1, 0, 983058, 1, 0, 983059, 1, 0, 983060, 1, 0, 983061, 1, 0, 983062, 1, 0, 983063, 1, 0, 983064, 1, 0, 983065, 1, 0, 983066, 1, 0, 983067, 1, 0, 983068, 1, 0, 983069, 1, 0, 1048576, 1, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 9, 131072, 1048590, 9, 131073, 1048591, 9, 131074, 1048592, 1, 0, 1048593, 1, 0, 1048594, 1, 0, 1048595, 1, 0, 1048596, 1, 0, 1048597, 1, 0, 1048598, 1, 0, 1048599, 1, 0, 1048600, 1, 0, 1048601, 1, 0, 1048602, 1, 0, 1048603, 1, 0, 1048604, 1, 0, 1048605, 1, 0 )

[node name="GameBoard" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 80, 80 )
format = 1
tile_data = PoolIntArray( -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 1, 0, -65521, 1, 0, -65520, 1, 0, -65519, 1, 0, -65518, 1, 0, -65517, 1, 0, -65516, 1, 0, -65515, 1, 0, -65514, 1, 0, -65513, 1, 0, -65512, 1, 0, -65511, 1, 0, -65510, 1, 0, -65509, 1, 0, -65508, 1, 0, -65507, 1, 0, 0, 1, 0, 29, 1, 0, 65536, 1, 0, 65565, 1, 0, 131072, 1, 0, 131101, 1, 0, 196608, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196637, 1, 0, 262144, 1, 0, 262151, 1, 0, 262173, 1, 0, 327680, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327709, 1, 0, 393216, 1, 0, 393245, 1, 0, 458752, 1, 0, 458781, 1, 0, 524288, 1, 0, 524317, 1, 0, 589824, 1, 0, 589853, 1, 0, 655360, 1, 0, 655389, 1, 0, 720896, 1, 0, 720921, 1, 0, 720922, 1, 0, 720923, 1, 0, 720925, 1, 0, 786432, 1, 0, 786440, 1, 0, 786441, 1, 0, 786459, 1, 0, 786461, 1, 0, 851968, 1, 0, 851976, 1, 0, 851977, 1, 0, 851993, 1, 0, 851994, 1, 0, 851995, 1, 0, 851997, 1, 0, 917504, 1, 0, 917512, 1, 0, 917513, 1, 0, 917514, 1, 0, 917515, 1, 0, 917516, 1, 0, 917533, 1, 0, 983040, 1, 0, 983048, 1, 0, 983049, 1, 0, 983050, 1, 0, 983051, 1, 0, 983052, 1, 0, 983069, 1, 0, 1048576, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1048605, 1, 0, 1114112, 1, 0, 1114113, 1, 0, 1114114, 1, 0, 1114115, 1, 0, 1114116, 1, 0, 1114117, 1, 0, 1114118, 1, 0, 1114119, 1, 0, 1114120, 1, 0, 1114121, 1, 0, 1114122, 1, 0, 1114123, 1, 0, 1114124, 1, 0, 1114125, 1, 0, 1114126, 1, 0, 1114127, 1, 0, 1114128, 1, 0, 1114129, 1, 0, 1114130, 1, 0, 1114131, 1, 0, 1114132, 1, 0, 1114133, 1, 0, 1114134, 1, 0, 1114135, 1, 0, 1114136, 1, 0, 1114137, 1, 0, 1114138, 1, 0, 1114139, 1, 0, 1114140, 1, 0, 1114141, 1, 0 )
script = ExtResource( 4 )

[node name="SpawningPoint" parent="GameBoard" instance=ExtResource( 5 )]
position = Vector2( 920, 600 )

[node name="Pawns" type="YSort" parent="GameBoard"]
script = ExtResource( 6 )
party_scene = ExtResource( 7 )

[node name="EncounterPawn" parent="GameBoard/Pawns" instance=ExtResource( 8 )]
editor/display_folded = true
position = Vector2( 440, 600 )
facing = {
"down": false,
"left": false,
"right": false,
"up": false
}

[node name="CollisionShape2D" parent="GameBoard/Pawns/EncounterPawn" index="2"]
shape = SubResource( 1 )

[node name="StartCombat" parent="GameBoard/Pawns/EncounterPawn/Actions" index="0" instance=ExtResource( 9 )]
formation = ExtResource( 10 )

[node name="DialoguePawn" parent="GameBoard/Pawns" instance=ExtResource( 8 )]
editor/display_folded = true
position = Vector2( 360, 360 )
facing = {
"down": false,
"left": false,
"right": false,
"up": false
}

[node name="CollisionShape2D" parent="GameBoard/Pawns/DialoguePawn" index="2"]
shape = SubResource( 2 )

[node name="Dialogue" parent="GameBoard/Pawns/DialoguePawn/Actions" index="0" instance=ExtResource( 11 )]
dialogue_file_path = "res://dialogue/data/test_conversation.json"

[node name="DialogueCombatPawn" parent="GameBoard/Pawns" instance=ExtResource( 8 )]
editor/display_folded = true
position = Vector2( 1160, 600 )
facing = {
"down": true,
"left": true,
"right": true,
"up": true
}

[node name="Dialogue" parent="GameBoard/Pawns/DialogueCombatPawn/Actions" index="0" instance=ExtResource( 11 )]
dialogue_file_path = "res://dialogue/data/test_conversation.json"

[node name="StartCombat" parent="GameBoard/Pawns/DialogueCombatPawn/Actions" index="1" instance=ExtResource( 9 )]
formation = ExtResource( 10 )

[node name="TestQuestGiver" parent="GameBoard/Pawns" instance=ExtResource( 12 )]
position = Vector2( 1020, 140 )
facing = {
"down": true,
"left": true,
"right": true,
"up": true
}

[node name="PawnQuestReceiver" parent="GameBoard/Pawns" instance=ExtResource( 13 )]
position = Vector2( 1300, 260 )
facing = {
"down": true,
"left": true,
"right": true,
"up": true
}

[node name="MapInterface" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 100

[node name="DialogueBox" parent="MapInterface" instance=ExtResource( 14 )]
visible = false


[editable path="GameBoard/Pawns/EncounterPawn"]

[editable path="GameBoard/Pawns/DialoguePawn"]

[editable path="GameBoard/Pawns/DialogueCombatPawn"]
